crates/gmsh/include/gmshc.h


GMSH_API void gmshModelMeshGetSizes(const int *dimTags, const size_t dimTags_n,
                                    double **sizes, size_t *sizes_n,
                                    int *ierr);
GMSH_API void gmshModelMeshSetSizeAtParametricPoints(const int dim,
                                                     const int tag,
                                                     const double *parametricCoord, const size_t parametricCoord_n,
                                                     const double *sizes, const size_t sizes_n,
                                                     int *ierr);
GMSH_API void gmshModelMeshSetSizeCallback(double (*callback)(int dim, int tag, double x, double y, double z, double lc, void *data), void *callback_data,
                                           int *ierr);
GMSH_API void gmshModelMeshRemoveSizeCallback(int *ierr);
GMSH_API void gmshModelMeshSetTransfiniteCurve(const int tag,
                                               const int numNodes,
                                               const char *meshType,
                                               const double coef,
                                               int *ierr);
GMSH_API void gmshModelMeshSetTransfiniteSurface(const int tag,
                                                 const char *arrangement,
                                                 const int *cornerTags, const size_t cornerTags_n,
                                                 int *ierr);
GMSH_API void gmshModelMeshSetTransfiniteVolume(const int tag,
                                                const int *cornerTags, const size_t cornerTags_n,
                                                int *ierr);
GMSH_API void gmshModelMeshSetTransfiniteAutomatic(const int *dimTags, const size_t dimTags_n,
                                                   const double cornerAngle,
                                                   const int recombine,
                                                   int *ierr);
GMSH_API void gmshModelMeshSetRecombine(const int dim,
                                        const int tag,
                                        const double angle,
                                        int *ierr);
GMSH_API void gmshModelMeshSetSmoothing(const int dim,
                                        const int tag,
                                        const int val,
                                        int *ierr);
GMSH_API void gmshModelMeshSetReverse(const int dim,
                                      const int tag,
                                      const int val,
                                      int *ierr);
GMSH_API void gmshModelMeshSetAlgorithm(const int dim,
                                        const int tag,
                                        const int val,
                                        int *ierr);
GMSH_API void gmshModelMeshSetSizeFromBoundary(const int dim,
                                               const int tag,
                                               const int val,
                                               int *ierr);
GMSH_API void gmshModelMeshSetCompound(const int dim,
                                       const int *tags, const size_t tags_n,
                                       int *ierr);
GMSH_API void gmshModelMeshSetOutwardOrientation(const int tag,
                                                 int *ierr);
GMSH_API void gmshModelMeshRemoveConstraints(const int *dimTags, const size_t dimTags_n,
                                             int *ierr);
GMSH_API void gmshModelMeshEmbed(const int dim,
                                 const int *tags, const size_t tags_n,
                                 const int inDim,
                                 const int inTag,
                                 int *ierr);
GMSH_API void gmshModelMeshRemoveEmbedded(const int *dimTags, const size_t dimTags_n,
                                          const int dim,
                                          int *ierr);
GMSH_API void gmshModelMeshGetEmbedded(const int dim,
                                       const int tag,
                                       int **dimTags, size_t *dimTags_n,
                                       int *ierr);
GMSH_API void gmshModelMeshReorderElements(const int elementType,
                                           const int tag,
                                           const size_t *ordering, const size_t ordering_n,
                                           int *ierr);
GMSH_API void gmshModelMeshComputeRenumbering(size_t **oldTags, size_t *oldTags_n,
                                              size_t **newTags, size_t *newTags_n,
                                              const char *method,
                                              const size_t *elementTags, const size_t elementTags_n,
                                              int *ierr);
GMSH_API void gmshModelMeshRenumberNodes(const size_t *oldTags, const size_t oldTags_n,
                                         const size_t *newTags, const size_t newTags_n,
                                         int *ierr);
GMSH_API void gmshModelMeshRenumberElements(const size_t *oldTags, const size_t oldTags_n,
                                            const size_t *newTags, const size_t newTags_n,
                                            int *ierr);
GMSH_API void gmshModelMeshSetPeriodic(const int dim,
                                       const int *tags, const size_t tags_n,
                                       const int *tagsMaster, const size_t tagsMaster_n,
                                       const double *affineTransform, const size_t affineTransform_n,
                                       int *ierr);
GMSH_API void gmshModelMeshGetPeriodic(const int dim,
                                       const int *tags, const size_t tags_n,
                                       int **tagMaster, size_t *tagMaster_n,
                                       int *ierr);
GMSH_API void gmshModelMeshGetPeriodicNodes(const int dim,
                                            const int tag,
                                            int *tagMaster,
                                            size_t **nodeTags, size_t *nodeTags_n,
                                            size_t **nodeTagsMaster, size_t *nodeTagsMaster_n,
                                            double **affineTransform, size_t *affineTransform_n,
                                            const int includeHighOrderNodes,
                                            int *ierr);
GMSH_API void gmshModelMeshGetPeriodicKeys(const int elementType,
                                           const char *functionSpaceType,
                                           const int tag,
                                           int *tagMaster,
                                           int **typeKeys, size_t *typeKeys_n,
                                           int **typeKeysMaster, size_t *typeKeysMaster_n,
                                           size_t **entityKeys, size_t *entityKeys_n,
                                           size_t **entityKeysMaster, size_t *entityKeysMaster_n,
                                           double **coord, size_t *coord_n,
                                           double **coordMaster, size_t *coordMaster_n,
                                           const int returnCoord,
                                           int *ierr);
GMSH_API void gmshModelMeshImportStl(int *ierr);
GMSH_API void gmshModelMeshGetDuplicateNodes(size_t **tags, size_t *tags_n,
                                             const int *dimTags, const size_t dimTags_n,
                                             int *ierr);
GMSH_API void gmshModelMeshRemoveDuplicateNodes(const int *dimTags, const size_t dimTags_n,
                                                int *ierr);
GMSH_API void gmshModelMeshRemoveDuplicateElements(const int *dimTags, const size_t dimTags_n,
                                                   int *ierr);
GMSH_API void gmshModelMeshSplitQuadrangles(const double quality,
                                            const int tag,
                                            int *ierr);
GMSH_API void gmshModelMeshSetVisibility(const size_t *elementTags, const size_t elementTags_n,
                                         const int value,
                                         int *ierr);
GMSH_API void gmshModelMeshGetVisibility(const size_t *elementTags, const size_t elementTags_n,
                                         int **values, size_t *values_n,
                                         int *ierr);
GMSH_API void gmshModelMeshClassifySurfaces(const double angle,
                                            const int boundary,
                                            const int forReparametrization,
                                            const double curveAngle,
                                            const int exportDiscrete,
                                            int *ierr);
GMSH_API void gmshModelMeshCreateGeometry(const int *dimTags, const size_t dimTags_n,
                                          int *ierr);
GMSH_API void gmshModelMeshCreateTopology(const int makeSimplyConnected,
                                          const int exportDiscrete,
                                          int *ierr);
GMSH_API void gmshModelMeshAddHomologyRequest(const char *type,
                                              const int *domainTags, const size_t domainTags_n,
                                              const int *subdomainTags, const size_t subdomainTags_n,
                                              const int *dims, const size_t dims_n,
                                              int *ierr);
GMSH_API void gmshModelMeshClearHomologyRequests(int *ierr);
GMSH_API void gmshModelMeshComputeHomology(int **dimTags, size_t *dimTags_n,
                                           int *ierr);
GMSH_API void gmshModelMeshComputeCrossField(int **viewTags, size_t *viewTags_n,
                                             int *ierr);
GMSH_API void gmshModelMeshTriangulate(const double *coord, const size_t coord_n,
                                       size_t **tri, size_t *tri_n,
                                       int *ierr);
GMSH_API void gmshModelMeshTetrahedralize(const double *coord, const size_t coord_n,
                                          size_t **tetra, size_t *tetra_n,
                                          int *ierr);
GMSH_API int gmshModelMeshFieldAdd(const char *fieldType,
                                   const int tag,
                                   int *ierr);
GMSH_API void gmshModelMeshFieldRemove(const int tag,
                                       int *ierr);
GMSH_API void gmshModelMeshFieldList(int **tags, size_t *tags_n,
                                     int *ierr);
GMSH_API void gmshModelMeshFieldGetType(const int tag,
                                        char **fileType,
                                        int *ierr);
GMSH_API void gmshModelMeshFieldSetNumber(const int tag,
                                          const char *option,
                                          const double value,
                                          int *ierr);