crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelMeshGetSizes(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        sizes: *mut *mut f64,
        sizes_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetSizeAtParametricPoints(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        sizes: *const f64,
        sizes_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetSizeCallback(
        callback: ::std::option::Option<
            unsafe extern "C" fn(
                dim: ::std::os::raw::c_int,
                tag: ::std::os::raw::c_int,
                x: f64,
                y: f64,
                z: f64,
                lc: f64,
                data: *mut ::std::os::raw::c_void,
            ) -> f64,
        >,
        callback_data: *mut ::std::os::raw::c_void,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveSizeCallback(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshSetTransfiniteCurve(
        tag: ::std::os::raw::c_int,
        numNodes: ::std::os::raw::c_int,
        meshType: *const ::std::os::raw::c_char,
        coef: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetTransfiniteSurface(
        tag: ::std::os::raw::c_int,
        arrangement: *const ::std::os::raw::c_char,
        cornerTags: *const ::std::os::raw::c_int,
        cornerTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetTransfiniteVolume(
        tag: ::std::os::raw::c_int,
        cornerTags: *const ::std::os::raw::c_int,
        cornerTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetTransfiniteAutomatic(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        cornerAngle: f64,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetRecombine(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetSmoothing(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetReverse(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetAlgorithm(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetSizeFromBoundary(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetCompound(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetOutwardOrientation(
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveConstraints(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshEmbed(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        inDim: ::std::os::raw::c_int,
        inTag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveEmbedded(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetEmbedded(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshReorderElements(
        elementType: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ordering: *const usize,
        ordering_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshComputeRenumbering(
        oldTags: *mut *mut usize,
        oldTags_n: *mut usize,
        newTags: *mut *mut usize,
        newTags_n: *mut usize,
        method: *const ::std::os::raw::c_char,
        elementTags: *const usize,
        elementTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRenumberNodes(
        oldTags: *const usize,
        oldTags_n: usize,
        newTags: *const usize,
        newTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRenumberElements(
        oldTags: *const usize,
        oldTags_n: usize,
        newTags: *const usize,
        newTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetPeriodic(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        tagsMaster: *const ::std::os::raw::c_int,
        tagsMaster_n: usize,
        affineTransform: *const f64,
        affineTransform_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetPeriodic(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        tagMaster: *mut *mut ::std::os::raw::c_int,
        tagMaster_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetPeriodicNodes(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        tagMaster: *mut ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        nodeTagsMaster: *mut *mut usize,
        nodeTagsMaster_n: *mut usize,
        affineTransform: *mut *mut f64,
        affineTransform_n: *mut usize,
        includeHighOrderNodes: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetPeriodicKeys(
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        tag: ::std::os::raw::c_int,
        tagMaster: *mut ::std::os::raw::c_int,
        typeKeys: *mut *mut ::std::os::raw::c_int,
        typeKeys_n: *mut usize,
        typeKeysMaster: *mut *mut ::std::os::raw::c_int,
        typeKeysMaster_n: *mut usize,
        entityKeys: *mut *mut usize,
        entityKeys_n: *mut usize,
        entityKeysMaster: *mut *mut usize,
        entityKeysMaster_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        coordMaster: *mut *mut f64,
        coordMaster_n: *mut usize,
        returnCoord: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshImportStl(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshGetDuplicateNodes(
        tags: *mut *mut usize,
        tags_n: *mut usize,
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveDuplicateNodes(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveDuplicateElements(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSplitQuadrangles(
        quality: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetVisibility(
        elementTags: *const usize,
        elementTags_n: usize,
        value: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetVisibility(
        elementTags: *const usize,
        elementTags_n: usize,
        values: *mut *mut ::std::os::raw::c_int,
        values_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshClassifySurfaces(
        angle: f64,
        boundary: ::std::os::raw::c_int,
        forReparametrization: ::std::os::raw::c_int,
        curveAngle: f64,
        exportDiscrete: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshCreateGeometry(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshCreateTopology(
        makeSimplyConnected: ::std::os::raw::c_int,
        exportDiscrete: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAddHomologyRequest(
        type_: *const ::std::os::raw::c_char,
        domainTags: *const ::std::os::raw::c_int,
        domainTags_n: usize,
        subdomainTags: *const ::std::os::raw::c_int,
        subdomainTags_n: usize,
        dims: *const ::std::os::raw::c_int,
        dims_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshClearHomologyRequests(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshComputeHomology(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshComputeCrossField(
        viewTags: *mut *mut ::std::os::raw::c_int,
        viewTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshTriangulate(
        coord: *const f64,
        coord_n: usize,
        tri: *mut *mut usize,
        tri_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshTetrahedralize(
        coord: *const f64,
        coord_n: usize,
        tetra: *mut *mut usize,
        tetra_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldAdd(
        fieldType: *const ::std::os::raw::c_char,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldRemove(tag: ::std::os::raw::c_int, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldList(
        tags: *mut *mut ::std::os::raw::c_int,
        tags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldGetType(
        tag: ::std::os::raw::c_int,
        fileType: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldSetNumber(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        value: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
